[package]
name = "dak-windows-client"
version = "0.1.0"
authors = ["Jordan Poles <jpoles1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.9.1"
colored = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.0"